Added Navigation Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="reset_all_data">Reset all App data !</string>
     <string name="resetall">Reset All</string>
     <string name="exit">Exit</string>
+    <string name="text_Emulation">Emulation</string>
 
 
     <string-array name="health_array">
@@ -171,4 +172,8 @@
         <item>10</item>
         <item>Custom</item>
     </string-array>
+    <string name="title_activity_navigation">Navigation</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
